--- a/Frontend/src/Dashboard/Dashboard.css
+++ b/Frontend/src/Dashboard/Dashboard.css
@@ -15,7 +15,8 @@ body{
 
     z-index: 1000;           /* ALWAYS above */
 
-    background-color: hsl(120,100%,38%);
+    background-color: rgb(56, 147, 56);
+    
 
 
     display: flex;
@@ -43,6 +44,21 @@ body{
     display: flex;
     gap: 50px;
 }
+.toolbar button {
+  background-color: rgb(56, 147, 56);
+  border: none;
+  border-radius: 6px;
+  
+  padding: 10px 20px;
+
+  color: white;
+  font-weight: bold;
+}
+
+.toolbar button:hover {
+  background-color: rgb(46, 130, 46);
+}
+
 
 
 
@@ -58,7 +74,7 @@ body{
 .score {
     display: flex;
 
-    margin-top: 30px;
+    margin-top: 70px;
     color: white;
 }
 
